--- a/style.css
+++ b/style.css
@@ -85,7 +85,7 @@ mark,
 audio,
 video {
   font-family: "Nunito", sans-serif;
-  color: #00c853
+  color: #0a803b;
 }
 
 body,
@@ -93,236 +93,247 @@ html {
   padding: 0;
   margin: 0;
   overflow-x: hidden;
-  background-color: #000
+  background-color: #000;
+}
+nav li {
+  float: left;
 }
 
 nav {
   font-family: "Nunito", sans-serif;
   background-color: #212121;
-  color: #fff;
+  color: rgb(158, 29, 29);
   display: -webkit-box;
   display: -ms-flexbox;
-  display: flex
+  display: flex;
+  -webkit-box-orient: horizontal;
+  -webkit-box-direction: normal;
+  -ms-flex-direction: row;
+  flex-direction: row;
 }
 
 nav header {
   padding: 8px;
-  display: inline
+  display: inline;
 }
 
 nav header a {
   text-decoration: none;
-  color: #fff
+  color: rgb(151, 37, 37);
 }
 
 nav header a:hover {
-  color: #ccff90
+  color: #c40909;
 }
 
-nav header+input:checked+div {
-  display: block
+nav header + input:checked + div {
+  display: block;
 }
 
 nav div {
-  display: none;
-  margin-left: auto
+  display: inline-block;
+  margin-left: auto;
+}
+
+nav div ul li {
+    padding
+
 }
 
 nav div ul {
-  list-style: none;
-  display: -webkit-box;
-  display: -ms-flexbox;
   display: flex;
-  margin: 0 10px
+  margin: 0 100px;
+  justify-content: center;
 }
 
 nav div ul li a {
-  display: inline-block;
+  display: block;
   padding: 8px;
-  color: #fff;
-  text-decoration: none
+  color: rgb(156, 17, 17);
+  text-decoration: none;
+  float: right;
+  margin-left: 1em;
 }
 
 nav div ul li:hover {
-  background-color: #ccff90
+  background-color: #702a06;
 }
 
 nav div ul li ul {
-  right: 0;
+  left: 100px;
   position: relative;
-  background: pink
+  background: rgb(110, 11, 28);
 }
 
-@media (max-width: 630px) {
+@media (max-width: 800px) {
   nav {
     display: -webkit-box;
     display: -ms-flexbox;
     display: flex;
-    -webkit-box-orient: vertical;
+    -webkit-box-orient: horizontal;
     -webkit-box-direction: normal;
-    -ms-flex-direction: column;
-    flex-direction: column
+    -ms-flex-direction: row;
+    flex-direction: row;
   }
 
   nav header {
-    text-align: center
+    text-align: center;
   }
 
   nav div {
-    margin: auto
+    margin: auto;
   }
 
   nav div ul {
-    padding: 0
+    padding: 0;
   }
 
   nav div ul li {
     border-top-left-radius: 5px;
-    border-top-right-radius: 5px
+    border-top-right-radius: 5px;
   }
 
   nav div ul li[active],
   nav div ul li.active {
-    border: 1px solid #ccff90;
-    border-bottom: none
+    border: 1px solid #79aa42;
+    border-bottom: none;
   }
 
   blockquote {
     border-left: 4px solid #ccff90;
     padding: 8px 5px;
-    margin: 0
+    margin: 0;
   }
 
   blockquote p {
-    font-size: 0.4rem
+    font-size: 0.4rem;
   }
 }
 
 @media (min-width: 630px) {
-
   nav div ul li.active,
   nav div ul li[active] {
-    border: 1px solid #ccff90;
+    border: 1px solid #e04414;
     border-bottom: none;
-    border-top: none
+    border-top: none;
   }
 
   nav header label {
-    display: none
+    display: none;
   }
 }
 
 section[container] {
   max-width: 38em;
   margin: auto;
-  padding: 5px
+  padding: 5px;
 }
 
 h1 {
-  font-size: 2.35em
+  font-size: 2.35em;
 }
 
 h2 {
-  font-size: 2em
+  font-size: 2em;
 }
 
 h3 {
-  font-size: 1.75em
+  font-size: 1.75em;
 }
 
 h4 {
-  font-size: 1.5em
+  font-size: 1.5em;
 }
 
 h5 {
-  font-size: 1.25em
+  font-size: 1.25em;
 }
 
 h6 {
-  font-size: 1em
+  font-size: 1em;
 }
 
 a {
-  color: #ccff90
+  color: #08b857;
 }
 
 a:hover {
-  color: #212121
+  color: #212121;
 }
 
 mark {
-  background-color: #ccff90
+  background-color: #ccff90;
 }
 
 code {
   font-family: monospace;
-  background-color: #33691e;
+  background-color: #291e69;
   padding-left: 5px;
-  padding-right: 5px
+  padding-right: 5px;
 }
 
 blockquote {
   border-left: 4px solid #ccff90;
   padding: 8px 10px;
-  width: 100%
+  width: 100%;
 }
 
 blockquote p {
   font-style: italic;
-  font-size: 1.1rem
+  font-size: 1.1rem;
 }
 
 blockquote footer::before {
-  content: "\2014 \00A0"
+  content: "\2014 \00A0";
 }
 
 blockquote footer cite {
   font-style: italic;
-  color: #33691e
+  color: #33691e;
 }
 
 pre {
-  background: #263238;
+  background: #4c8fb1;
   overflow-x: auto;
   text-align: left;
-  padding: 5px
+  padding: 5px;
 }
 
 pre code {
   display: block;
   padding: 0 10px;
-  background: transparent
+  background: transparent;
 }
 
 table {
   display: table;
   padding: 5px;
-  border-collapse: collapse
+  border-collapse: collapse;
 }
 
 table thead,
 table tbody {
-  text-align: left
+  text-align: left;
 }
 
 table tr th,
 table tr td {
   padding: 5px 10px;
-  border-bottom: 1px solid #ccff90
+  border-bottom: 1px solid #ccff90;
 }
 
 div[overflow] {
   overflow-x: auto;
-  max-width: 100vw
+  max-width: 100vw;
 }
 
 div[overflow] ::-webkit-scrollbar {
-  height: 0
+  height: 0;
 }
 
 img {
   max-width: 100%;
-  border-radius: 5px
+  border-radius: 5px;
 }
 
 form div {
@@ -333,11 +344,11 @@ form div {
   -webkit-box-direction: normal;
   -ms-flex-direction: column;
   flex-direction: column;
-  margin: 10px 5px
+  margin: 10px 5px;
 }
 
 form div p {
-  margin: 0px
+  margin: 0px;
 }
 
 form input,
@@ -345,60 +356,60 @@ form select {
   font-size: 1rem;
   padding: 5px;
   border: 1px solid #33691e;
-  color: #212121
+  color: #212121;
 }
 
 form input:active,
 form input:focus,
 form select:active,
 form select:focus {
-  outline-color: #ccff90
+  outline-color: #ccff90;
 }
 
 form input[type="submit"] {
   padding: 10px;
   background-color: #ccff90;
-  color: #00c853;
+  color: #45448b;
   border-radius: 5px;
   border: none;
-  cursor: pointer
+  cursor: pointer;
 }
 
 form input[type="submit"]:active,
 form input[type="submit"]:focus {
-  outline: none
+  outline: none;
 }
 
 form input[type="submit"]:active {
-  background-color: #212121;
-  color: #ccff90
+  background-color: #3f2020;
+  color: #ccff90;
 }
 
 form input[type="submit"]:disabled {
-  background: #33691e;
-  cursor: not-allowed
+  background: #371bb4;
+  cursor: not-allowed;
 }
 
 form input[type="submit"][secondary] {
   background-color: #212121;
-  color: #ccff90
+  color: #ccff90;
 }
 
 form input[type="submit"][secondary]:active {
   background-color: #ccff90;
-  color: initial
+  color: initial;
 }
 
 textarea {
   color: #212121;
   width: -webkit-fill-available;
   font-size: 1rem;
-  padding: 5px
+  padding: 5px;
 }
 
 textarea:active,
 textarea:focus {
-  outline-color: #ccff90
+  outline-color: #ccff90;
 }
 
 button {
@@ -407,40 +418,40 @@ button {
   color: #00c853;
   border-radius: 5px;
   border: none;
-  cursor: pointer
+  cursor: pointer;
 }
 
 button:active,
 button:focus {
-  outline: none
+  outline: none;
 }
 
 button:active {
-  background-color: #212121;
-  color: #ccff90
+  background-color: #4d0606;
+  color: #ccff90;
 }
 
 button:disabled {
   background: #33691e;
-  cursor: not-allowed
+  cursor: not-allowed;
 }
 
 button[secondary] {
   background-color: #212121;
-  color: #ccff90
+  color: #ccff90;
 }
 
 button[secondary]:active {
   background-color: #ccff90;
-  color: initial
+  color: initial;
 }
 
-body>footer {
-  background-color: #212121;
+body > footer {
+  background-color: #8d1414;
   position: relative;
   bottom: 0;
   width: 100%;
-  padding: 5px
+  padding: 5px;
 }
 
 /*# sourceMappingURL=darkforest-green.css.map */
