--- a/style.css
+++ b/style.css
@@ -90,13 +90,13 @@ video {
 
 body,
 html {
-  padding: 0;
+  padding: 1em;
   margin: 0;
   overflow-x: hidden;
   background-color: #000;
 }
 nav li {
-  float: inline;
+  display: inline;
 }
 
 nav {
